name:                pngutil
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Mark Grant
maintainer:          markrgrant@yahoo.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     PNG
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, bytestring >=0.10 && <0.11,
                       attoparsec >=0.12 && <0.13, binary
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite             test-pngutil
    type:              exitcode-stdio-1.0
    main-is:           TestPNG.hs
    hs-source-dirs:    test
    build-depends:     base, png
    default-language:  Haskell2010
